add: quiz type and websocket document(async api)
